<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>m3ua</artifactId>
        <groupId>org.restcomm.protocols.ss7.m3ua</groupId>
        <version>9.2.12</version>
    </parent>

    <artifactId>m3ua-impl</artifactId>

    <name>Restcomm jSS7 :: M3UA :: Impl :: ${project.artifactId}</name>

    <dependencies>
        <dependency>
            <groupId>org.mobicents.commons</groupId>
            <artifactId>commons</artifactId>
        </dependency>
        <dependency>
            <groupId>org.restcomm.protocols.ss7.management</groupId>
            <artifactId>shell-server-api</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
        </dependency>
        <dependency>
            <groupId>org.restcomm.protocols.ss7.m3ua</groupId>
            <artifactId>m3ua-api</artifactId>
            <version>${project.version}</version>
        </dependency>


        <!-- netty -->
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-common</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-buffer</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-transport-sctp</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-handler</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-codec</artifactId>
            <version>${netty.version}</version>
        </dependency>
        <dependency>
            <groupId>io.netty</groupId>
            <artifactId>netty-codec-base</artifactId>
            <version>${netty.version}</version>
        </dependency>

        <dependency>
            <groupId>org.restcomm.protocols.ss7.mtp</groupId>
            <artifactId>mtp</artifactId>
        </dependency>
        <dependency>
            <groupId>org.restcomm.protocols.ss7.congestion</groupId>
            <artifactId>congestion</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mobicents.protocols.sctp</groupId>
            <artifactId>sctp-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mobicents.protocols.sctp</groupId>
            <artifactId>sctp-impl</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.restcomm.protocols.ss7.statistics</groupId>
            <artifactId>statistics-impl</artifactId>
        </dependency>
        <!-- Jackson XML for serialization (replaces XStream) -->
        <dependency>
            <groupId>com.fasterxml.jackson.dataformat</groupId>
            <artifactId>jackson-dataformat-xml</artifactId>
            <version>2.15.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.15.2</version>
        </dependency>
        <dependency>
            <groupId>com.fasterxml.woodstox</groupId>
            <artifactId>woodstox-core</artifactId>
            <version>6.5.1</version>
        </dependency>
        <!-- JCTools for high-performance queues -->
        <dependency>
            <groupId>org.jctools</groupId>
            <artifactId>jctools-core</artifactId>
            <version>4.0.1</version>
        </dependency>
    </dependencies>

    <build>
        <finalName>${project.artifactId}-${project.version}</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>
                    ${maven-surefire-plugin.version}
                </version>

                <configuration>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <groupId>org.apache.maven.plugins</groupId>
                <version>3.8.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgument>
                        -XDignore.symbol.file=true
                    </compilerArgument>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
